	  [General]
	  debug-on-errors = true/false  (default: false)
	If turned on, errors will cause the program to break into the C++ 
	debugger. More previsely, cRuntimeError's constructor will do
	__asm int 3 (debugger interrupt) on Windows, and raise(SIGABRT)
	on other platforms (Linux, etc). This makes it possible to 
	investigate the context (stack frames, variables etc) of a runtime 
	error.

2005-03-07  Andras Varga

	* chist.cc: changed to eliminate warnings about converting double to 
	int

2005-02-06  Andras Varga

	* csimplemodule.cc: send()/sendDelayed() fix: check if output gate is
	connected. If we didn't throw error there, msg would be delivered back
	to the sender module as a self-message.
	
2005-01-12  Andras Varga

	csimplemodule.cc, csimul.cc: changed the way scheduled events or sent
	messages for deleted or finished (see cSimpleModule::end()) modules
	are handled. Before, these messages were deleted by the cSimpleModule
	destructor, but this made it very long to clean up large models.
	Now, messages are not deleted in the dtor, but left in the FES -- they
	will be discarded in cSimulation::selectNextModule() when they're met.

2005-01-10  Andras Varga

	* cscheduler.cc: added cRealTimeScheduler implementation

2005-01-07  Andras Varga

	* cdispstr.cc: getTagArg(): fixed to never return NULL (returns ""
	instead)

2005-01-02  Andras Varga

	* cstruct.cc: fix: cStructDescriptor ctor crashed if NULL pointer was
	passed to it

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-27  Andras Varga

	* csimplemodule.cc: fix: in Windows, creation of activity() simple
	modules crashed if coroutine (win32 Fiber) could not be created.

2004-12-22  Andras Varga

	* chist.cc: cLongHistogram changes to enable num_cells set up
	adaptively. See class doc for more info.

2004-12-22  Andras Varga

	* csimplemodule.cc: "scheduleAt(): not owner of message" error message
	(and similar messages from send() and sendDirect()) changed to